frontend/test/should_fail/map_007.grg
using map_model_001;

rule constAssignment {
	a:A;

	modify {
		eval {
			a.conststringToInt = a.conststringToInt | map<string,int>{ "4"->2 };
		}
	}
}
